# localize

./: .gitignore  AboutTCMSection.tsx  Cargo.toml
src/: analyzer.rs  lib.rs  main.rs  parser.rs  walker.rs
