[package]
name = "localize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["cargo"] }
swc_common = { version = "0.33.0", features = ["tty-emitter"] }
swc_ecma_ast = "0.110.0"
swc_ecma_parser = { version = "0.141.3", features = ["typescript"] }
swc_ecma_visit = "0.96.0"
walkdir = "2.3.3"